updated info about authors

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = giturlparse
 version = attr: giturlparse.__version__
-url = https://github.com/nephila/giturlparse
+url = https://github.com/godfryd/giturlparse2
 author = Aaron O Mullan
 author_email = aaron@friendco.de
-maintainer = Iacopo Spalletti
-maintainer_email = i.spalletti@nephila.it
+maintainer = Michal Nowikowski
+maintainer_email = godfryd@gmail.com
 description = A Git URL parsing module (supports parsing and rewriting)
 long_description = file: README.rst, HISTORY.rst
 long_description_content_type = text/x-rst
