change pkg name in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = giturlparse
+name = giturlparse2
 version = attr: giturlparse.__version__
 url = https://github.com/godfryd/giturlparse2
 author = Aaron O Mullan
